--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "test": "nx run-many --target=test"
   },
   "dependencies": {
+    "@mantine/core": "^7.15.3",
+    "@mantine/hooks": "^7.15.3",
     "@nestjs/common": "10.2.10",
     "@nestjs/core": "10.2.10",
     "@nestjs/platform-express": "10.2.10",
+    "@tabler/icons-react": "^3.28.1",
+    "@tanstack/react-query": "^5.63.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router": "^6.3.0",
@@ -65,6 +69,9 @@
     "jest-preset-angular": "12.2.3",
     "jsdom": "~22.1.0",
     "nx": "20.3.0",
+    "postcss": "^8.4.49",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "reflect-metadata": "^0.1.13",
