--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.15.3",
+    "@mantine/form": "^7.15.3",
     "@mantine/hooks": "^7.15.3",
     "@nestjs/common": "10.2.10",
     "@nestjs/core": "10.2.10",
